# viaduct

./: .gitignore  README.md  justfile  shell.nix  viaduct.cabal
executables/main/: Main.hs
hooks/pre-commit/: 01-ensure-formatted.sh
hooks/scripts/: ensure-formatted.sh
scripts/: cabal-fmt.sh  ormolu.sh
