cabal-version: 3.0

name: viaduct
version: 0.0.1
author: jkachmar
copyright: 2021 Joe Kachmar

license: MPL-2.0
license-file: LICENSE
build-type: Simple
extra-source-files:
  README.md
tested-with:
  GHC==8.10.4

source-repository head
  type: git
  location: git@github.com:jkachmar/viaduct

-------------------------------------------------------------------------------

common common
  default-language:
    Haskell2010
  default-extensions:
    DerivingStrategies,
    DerivingVia,
    GeneralizedNewtypeDeriving,
    ImportQualifiedPost,
    NamedFieldPuns,
    NoImplicitPrelude,
    OverloadedStrings,
    ScopedTypeVariables,
    StrictData
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specializations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -- ^ workaround for https://github.com/haskell/cabal/pull/7352

  build-depends:
    base,
    conduit,
    formatting,
    katip,
    lens,
    template-haskell,
    text,
    req,
    rio

common executables
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"
  build-depends:
    viaduct

common tests
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    hspec

-------------------------------------------------------------------------------

library
  import: common
  hs-source-dirs: library
  exposed-modules:
    App
    -- Capabilities.Http
    Capabilities.Logger
    Capabilities.Logger.Katip
    Run
  other-modules:
    Paths_viaduct

-------------------------------------------------------------------------------

executable app
  import:
    common,
    executables
  hs-source-dirs: executables
  main-is: Main.hs
  other-modules:
    Paths_viaduct
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , viaduct
  default-language: Haskell2010

-------------------------------------------------------------------------------

test-suite unit
  import:
    common,
    executables,
    tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/unit
  main-is: Driver.hs
  other-modules:
    Paths_viaduct
