cabal-version:      3.0
name:               viaduct
version:            0.0.1
author:             jkachmar
copyright:          2021 Joe Kachmar
license:            MPL-2.0
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==8.10.4

source-repository head
  type:     git
  location: git@github.com:jkachmar/viaduct

-------------------------------------------------------------------------------

-- Settings shared between all components.
common common-settings
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    StrictData

  -- NOTE: '-Wno-prepositive-qualified-modules' is currently a workaround for
  -- https://github.com/haskell/cabal/pull/7352
  ghc-options:
    -Weverything -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-missed-specialisations -Wno-all-missed-specializations
    -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module

-- Common libraries shared between most components.
common common-libraries
  build-depends:
    , base
    , rio

-- Settings shared between all executable components.
common executables
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends: viaduct

-- Settings shared between all test components.
common tests
  build-tool-depends: hspec-discover:hspec-discover -any
  build-depends:      hspec

-------------------------------------------------------------------------------

library
  import:
    , common-settings
    , common-libraries

  hs-source-dirs:  library/private library/public
  build-depends:
    , formatting
    , katip
    , template-haskell
    , text

  -- cabal-fmt: expand library/public
  --
  exposed-modules:
    App
    Capabilities.Logger
    Capabilities.Logger.Katip
    Run

  -- cabal-fmt: expand library/private
  --
  other-modules:   Paths_viaduct

-------------------------------------------------------------------------------

executable app
  import:
    common-settings,
    executables

  hs-source-dirs:   executables/private executables/main
  main-is:          Main.hs

  -- cabal-fmt: expand executables/private
  --
  other-modules:    Paths_viaduct
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , viaduct

  default-language: Haskell2010

-------------------------------------------------------------------------------

test-suite unit
  import:
    common-libraries,
    common-settings,
    executables,
    tests

  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/unit/private tests/unit/driver
  main-is:        Driver.hs

  -- cabal-fmt: expand tests/unit/private
  --
  other-modules:  Paths_viaduct
